--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-webcam": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npx http-server ./build --proxy http://127.0.0.1:$PORT?",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
